[project]
name = "workflow_tracing"
authors = [
    { name = "SanU Development Team", email = "eng.bakraldubai@gmail.com"}
]
description = "A frappe web-based appplication that adds a workflow tracing features and reports"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
